--- a/gleam.toml
+++ b/gleam.toml
@@ -1,13 +1,13 @@
 name = "process_waiter"
 version = "1.0.0"
+description = "Wait for Erlang processes to exit"
 
-# Fill out these fields if you intend to generate HTML documentation or publish
-# your project to the Hex package manager.
-#
-# description = ""
-# licences = ["Apache-2.0"]
-# repository = { type = "github", user = "username", repo = "project" }
-# links = [{ title = "Website", href = "https://gleam.run" }]
+licences = ["Apache-2.0"]
+repository = { type = "github", user = "lpil", repo = "process-waiter" }
+links = [
+  { title = "Website", href = "https://gleam.run" },
+  { title = "Sponsor", href = "https://github.com/sponsors/lpil" },
+]
 
 [dependencies]
 gleam_stdlib = "~> 0.32"
